- Fixed the resolution of local or remote schema files - Added support for local file based (AdvanceLocalSchemaResolver) or memory-based (AdvanceRemoteSchemaResolver) XType resolution for the compiler